# AdventOfCode

./: CMakeLists.txt  Makefile  README.md  make.sh  sow_std.h
day1/: CMakeLists.txt  main  main.c  main.py
day2/: CMakeLists.txt  main  main.c
day3/: CMakeLists.txt  main.c
day4/: CMakeLists.txt  main.c
day5/: CMakeLists.txt  main.c
day6/: CMakeLists.txt  main.c  main.cpp  main.py
sow_std/: CMakeLists.txt  mainsmath.c  mainsstr.c  mainsvectorstr.c  mainvector.c  sfile.c  smd5.c  sstr.c  svector.c  svector.h  svectorstr.c  svectorstr.h
sow_std/include/: sfile.h  smath.h  sow_std.h  sstr.h
